[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/icons/icon_folder.svg" type="Texture" id=1]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/path_line_edit/FileExplorerButton.gd" type="Script" id=2]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/path_line_edit/FilePathLineEdit.gd" type="Script" id=3]
[ext_resource path="res://addons/eh_jogos.docs-exporter/editor_uis/ui_elements/path_line_edit/PathLineEdit.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0, 0, 0, 0.376471 )

[node name="DirectoryPathLineEdit" type="HBoxContainer"]
margin_left = 511.0
margin_right = 1018.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_constants/separation = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLineEdit" type="LineEdit" parent="."]
margin_right = 474.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 4 )

[node name="FileExplorerButton" type="Button" parent="."]
margin_left = 479.0
margin_right = 507.0
margin_bottom = 22.0
icon = ExtResource( 1 )
script = ExtResource( 2 )
window_title = "Select directory to scan"

[node name="ColorRect" type="ColorRect" parent="FileExplorerButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
mouse_filter = 2
color = Color( 0.396078, 0.584314, 0.784314, 0.239216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="FileExplorerButton"]
margin_left = -993.0
margin_top = -24.0
margin_right = -76.0
margin_bottom = 451.0
window_title = "Select directory to scan"
mode_overrides_title = false
mode = 2
show_hidden_files = true
[connection signal="text_changed" from="PathLineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="PathLineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="dir_selected" from="FileExplorerButton/FileDialog" to="PathLineEdit" method="_on_FileDialog_dir_selected"]
[connection signal="dir_selected" from="FileExplorerButton/FileDialog" to="." method="_on_FileDialog_dir_selected"]
